@@ -14,6 +14,7 @@ version ? (????-??-??):
   - helpdesk: some one-time functions from LMS class moved to modules (alec)
   - helpdesk: added notes to tickets (alec)
   - helpdesk: new note/message e-mail notification on demand (alec)
+  - lms-payments, lmsd/payments: fixed problem with discounts invoicing (alec)
 
 version 1.9.6 Belos (2007-02-16):
 
